--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 buildscript {
-	ext {
-		kotlinVersion = '1.2.61'
-		springBootVersion = '2.0.4.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		jcenter()
-		maven { url 'https://plugins.gradle.org/m2/' }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-		classpath 'nu.studer:gradle-jooq-plugin:2.0.11'
-	}
+    ext {
+        kotlinVersion = '1.2.61'
+        springBootVersion = '2.0.4.RELEASE'
+        jooqVersion = '3.11.4'
+    }
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath group: 'org.jooq', name: 'jooq-codegen', version: '3.11.4'
+        classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
+    }
 }
 
 
@@ -28,96 +30,98 @@ group = 'fsight'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 compileKotlin {
-	kotlinOptions {
-		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
-	}
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = "1.8"
+    }
 }
 compileTestKotlin {
-	kotlinOptions {
-		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
-	}
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = "1.8"
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-jooq')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	/*compile('org.springframework.boot:spring-boot-starter-webflux')*/
-	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-	compile("org.jetbrains.kotlin:kotlin-reflect")
-	compile('org.postgresql:postgresql')
-	runtime('org.postgresql:postgresql')
-	jooqRuntime('org.postgresql:postgresql')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor:reactor-test')
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-	compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
-	compile group: 'org.jooq', name: 'jooq', version: '3.10.0'
-	compile group: 'org.jooq', name: 'jooq-meta', version: '3.10.0'
-	compile group: 'org.jooq', name: 'jooq-codegen', version: '3.10.0'
-	compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
-	compile group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.4.0'
-	compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.4.0'
+    compile('org.springframework.boot:spring-boot-starter-jooq')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile('org.postgresql:postgresql')
+    runtime('org.postgresql:postgresql')
+    jooqRuntime('org.postgresql:postgresql')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('io.projectreactor:reactor-test')
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
+
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.4.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.4.0'
+
+    compile group: 'org.jooq', name: 'jooq', version: jooqVersion
+    compile group: 'org.jooq', name: 'jooq-meta', version: jooqVersion
+    compile group: 'org.jooq', name: 'jooq-codegen', version: jooqVersion
 }
 
 jooq {
-	version = '3.10.7'
-	edition = 'OSS'
-	sample(sourceSets.main) {
-		jdbc {
-			driver = 'org.postgresql.Driver'
-			url = 'jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack'
-			user = 'postgres'
-			password = 'Qwerty1'
-			/*properties {
+    version = jooqVersion
+    edition = 'OSS'
+    sample(sourceSets.main) {
+        jdbc {
+            driver = 'org.postgresql.Driver'
+            url = 'jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack'
+            user = 'postgres'
+            password = 'Qwerty1'
+            /*properties {
                 property {
                     key = 'ssl'
                     value = 'true'
                 }
             }*/
-		}
-		generator {
-			name = 'org.jooq.util.DefaultGenerator'
-			strategy {
-				name = 'org.jooq.util.DefaultGeneratorStrategy'
-				// ...
-			}
-			database {
-				name = 'org.jooq.util.postgres.PostgresDatabase'
-				inputSchema = 'public'
-				forcedTypes {
-					forcedType {
-						name = 'varchar'
-						expression = '.*'
-						types = 'JSONB?'
-					}
-					forcedType {
-						name = 'varchar'
-						expression = '.*'
-						types = 'INET'
-					}
-				}
-				// ...
-			}
-			generate {
-				relations = true
-				deprecated = false
-				records = true
-				immutablePojos = true
-				fluentSetters = true
-				// ...
-			}
-			target {
-				packageName = 'youtrack.jooq'
-			}
-		}
-	}
+        }
+        generator {
+            name = 'org.jooq.codegen.DefaultGenerator'
+            strategy {
+                name = 'org.jooq.codegen.DefaultGeneratorStrategy'
+                // ...
+            }
+            database {
+                name = 'org.jooq.meta.postgres.PostgresDatabase'
+                inputSchema = 'public'
+                forcedTypes {
+                    forcedType {
+                        name = 'varchar'
+                        expression = '.*'
+                        types = 'JSONB?'
+                    }
+                    forcedType {
+                        name = 'varchar'
+                        expression = '.*'
+                        types = 'INET'
+                    }
+                }
+                // ...
+            }
+            generate {
+                relations = true
+                deprecated = false
+                records = true
+                immutablePojos = true
+                fluentSetters = true
+            }
+            target {
+                packageName = 'youtrack.jooq'
+            }
+        }
+    }
 }
