Moved all imports to etl package

--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,8 @@ jooq {
                 fluentSetters = true
             }
             target {
-                packageName = 'youtrack.jooq'
+                packageName = 'fsight.youtrack.generated.jooq'
+                directory = 'src/main/kotlin'
             }
         }
     }
