--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.4.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.4.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.4.0'
 
     compile group: 'org.jooq', name: 'jooq', version: jooqVersion
     compile group: 'org.jooq', name: 'jooq-meta', version: jooqVersion
