--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath group: 'org.jooq', name: 'jooq-codegen', version: '3.11.4'
         classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
+
     }
 }
 
@@ -72,6 +73,10 @@ dependencies {
     compile group: 'org.jooq', name: 'jooq', version: jooqVersion
     compile group: 'org.jooq', name: 'jooq-meta', version: jooqVersion
     compile group: 'org.jooq', name: 'jooq-codegen', version: jooqVersion
+    /*//HTML to plain text
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'*/
+    compile 'org.jsoup:jsoup:1.11.3'
+
 }
 
 jooq {
