--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jooq.sql-dialect=Postgres
-spring.datasource.url=jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack
+spring.datasource.url=jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack?autoReconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=Qwerty1
 server.port=${port:8081}
