--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ compileTestKotlin {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 
@@ -54,8 +55,7 @@ dependencies {
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile('org.postgresql:postgresql')
-    runtime('org.postgresql:postgresql')
+    
     jooqRuntime('org.postgresql:postgresql')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
@@ -76,6 +76,16 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'*/
     compile 'org.jsoup:jsoup:1.11.3'
 
+    //exposed
+    compile 'org.jetbrains.exposed:exposed:0.11.2'
+    compile 'org.jetbrains.exposed:spring-transaction:0.11.2'
+    //db drivers
+    compile "com.microsoft.sqlserver:mssql-jdbc:6.4.0.jre7"
+    compile('org.postgresql:postgresql')
+    runtime('org.postgresql:postgresql')
+    // logging
+    compile "net.logstash.logback:logstash-logback-encoder:5.0"
+    compile "io.github.microutils:kotlin-logging:1.5.3"
 }
 
 jooq {
