--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=Qwerty1
 server.port=${port:8081}
 logging.level.org.springframework.web=DEBUG
 #endpoints.shutdown.enabled=true
+#spring.thymeleaf.encoding=UTF-8
+
