Modified scheduled tasks configuration, excluded run on dev machine. Updated dependencies.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack?autoReconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=Qwerty1
-server.port=${port:8081}
+server.port=${port:8080}
 logging.level.org.springframework.web=DEBUG
 #endpoints.shutdown.enabled=true
 #spring.thymeleaf.encoding=UTF-8
-
+management.endpoint.shutdown.enabled=true
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=*
