--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     ext {
         kotlinVersion = '1.3.10'
-        springBootVersion = '2.1.0.RELEASE'
+        springBootVersion = '2.1.1.RELEASE'
         jooqVersion = '3.11.4'
+        retrofitVersion = '2.5.0'
     }
     repositories {
         mavenCentral()
@@ -52,37 +53,41 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jooq')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    /*compile('org.springframework.boot:spring-boot-starter-security')*/
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile("org.jetbrains.kotlin:kotlin-reflect")    
     
-    jooqRuntime('org.postgresql:postgresql')
+    
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
 
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-    compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
-
-    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
-    compile group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.4.0'
-    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.4.0'
-    compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.4.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion
+    compile group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: retrofitVersion
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: retrofitVersion
+    compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: retrofitVersion
 
     compile group: 'org.jooq', name: 'jooq', version: jooqVersion
     compile group: 'org.jooq', name: 'jooq-meta', version: jooqVersion
     compile group: 'org.jooq', name: 'jooq-codegen', version: jooqVersion
-    /*//HTML to plain text
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'*/
+
+    //HTML to plain text
     compile 'org.jsoup:jsoup:1.11.3'
 
     //exposed
     compile 'org.jetbrains.exposed:exposed:0.11.2'
     compile 'org.jetbrains.exposed:spring-transaction:0.11.2'
+
     //db drivers
     compile "com.microsoft.sqlserver:mssql-jdbc:6.4.0.jre7"
     compile('org.postgresql:postgresql')
     runtime('org.postgresql:postgresql')
+    jooqRuntime('org.postgresql:postgresql')
+
     // logging
     compile "net.logstash.logback:logstash-logback-encoder:5.0"
     compile "io.github.microutils:kotlin-logging:1.5.3"
