--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.10'
+        kotlinVersion = '1.3.11'
         springBootVersion = '2.1.1.RELEASE'
         jooqVersion = '3.11.4'
         retrofitVersion = '2.5.0'
@@ -9,6 +9,7 @@ buildscript {
         mavenCentral()
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -16,7 +17,7 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath group: 'org.jooq', name: 'jooq-codegen', version: '3.11.4'
         classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
-
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion"
     }
 }
 
@@ -26,6 +27,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'nu.studer.jooq'
+apply plugin: 'kotlinx-serialization'
 
 group = 'fsight'
 version = '0.0.1-SNAPSHOT'
@@ -46,6 +48,8 @@ compileTestKotlin {
 repositories {
     mavenCentral()
     jcenter()
+    maven { url 'https://plugins.gradle.org/m2/' }
+    maven { url "https://kotlin.bintray.com/kotlinx" }
 }
 
 
@@ -57,9 +61,12 @@ dependencies {
     /*compile('org.springframework.boot:spring-boot-starter-security')*/
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile("org.jetbrains.kotlin:kotlin-reflect")    
-    
-    
+    compile("org.jetbrains.kotlin:kotlin-reflect")
+    /*compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.1"*/
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-serialization-runtime
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.9.1'
+
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
