--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Qwerty1
 server.port=${port:8080}
 logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=ERROR
 #endpoints.shutdown.enabled=true
 #spring.thymeleaf.encoding=UTF-8
 management.endpoint.shutdown.enabled=true
