DevOps integration fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.level.org.springframework.web=DEBUG
 management.endpoint.shutdown.enabled=true
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
+logging.level.root=WARN
+logging.level.fsight.youtrack=TRACE
+logging.file=log/log.log
