Changed configuration to keep database connections alive

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ management.endpoints.web.exposure.include=*
 logging.level.root=WARN
 logging.level.fsight.youtrack=TRACE
 logging.file=log/log.log
+spring.datasource.tomcat.test-on-borrow=true
+spring.datasource.tomcat.validation-query=SELECT 1;
+spring.datasource.tomcat.validation-interval=30000
+spring.datasource.tomcat.remove-abandoned=true
+spring.datasource.tomcat.remove-abandoned-timeout=60
+spring.datasource.tomcat.log-abandoned=true
