--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.50'
+        kotlinVersion = '1.3.61'
         springBootVersion = '2.1.9.RELEASE'
         jooqVersion = '3.12.1'
         retrofitVersion = '2.6.2'
@@ -71,7 +71,8 @@ dependencies {
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.13.0'
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.14.0'
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
@@ -104,6 +105,21 @@ dependencies {
     // logging
     compile "net.logstash.logback:logstash-logback-encoder:5.0"
     compile "io.github.microutils:kotlin-logging:1.5.3"
+
+   /* testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.5.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.2")
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.5.2")
+    test.useJUnitPlatform()*/
+    testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
+}
+
+test {
+    useJUnitPlatform()/* {
+        includeTags 'fast'
+        excludeTags 'slow'
+    }*/
 }
 
 jooq {
