--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jooq.sql-dialect=Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://v-ctp-postgres.fs.fsight.world:5432/youtrack?autoReconnect=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/youtrack_test?autoReconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=Qwerty1
+#spring.datasource.password=q
 server.port=${port:8080}
 logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.web=ERROR
