--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.14.0'
+    /*compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.14.0'*/
 
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
