Notifications about errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.username=postgres
 spring.datasource.password=Qwerty1
 #spring.datasource.password=q
 server.port=${port:8080}
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 #logging.level.org.springframework.web=ERROR
 #endpoints.shutdown.enabled=true
 #spring.thymeleaf.encoding=UTF-8
 management.endpoint.shutdown.enabled=true
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.fsight.youtrack=TRACE
 logging.file=log/log.log
 spring.datasource.tomcat.test-on-borrow=true
